--- a/sudoku/src/App.css
+++ b/sudoku/src/App.css
@@ -25,6 +25,13 @@ table {
   background: lightblue;
 }
 
+.cell.current {
+  border: 1px solid lightgray;
+  padding: 12px 16px;
+  text-align: center;
+  background: rgb(236, 236, 4);
+}
+
 tr:nth-of-type(3n) {
   border-bottom: 3px solid gray;
 }
