--- a/sudoku/src/App.css
+++ b/sudoku/src/App.css
@@ -22,14 +22,39 @@ table {
   border: 1px solid lightgray;
   padding: 12px 16px;
   text-align: center;
-  background: lightblue;
+  color: black;
+  background: rgb(238, 237, 237);
 }
 
-.cell.current {
+.cell.pendingsolve {
   border: 1px solid lightgray;
   padding: 12px 16px;
   text-align: center;
-  background: rgb(236, 236, 4);
+  color: white;
+  background: rgb(255, 255, 255);
+}
+
+.cell.solving {
+  border: 1px solid lightgray;
+  padding: 12px 16px;
+  text-align: center;
+  color: rgb(0, 0, 0);
+  background: rgb(248, 222, 188);
+}
+
+.cell.solved {
+  border: 1px solid lightgray;
+  padding: 12px 16px;
+  text-align: center;
+  color: rgb(2, 73, 2);
+  background: rgb(207, 255, 207);
+}
+
+.cell.current {
+  border: 1px solid rgb(0, 0, 0);
+  padding: 12px 16px;
+  text-align: center;
+  background: rgb(252, 206, 147);
 }
 
 tr:nth-of-type(3n) {
