--- a/sudoku/src/App.css
+++ b/sudoku/src/App.css
@@ -17,15 +17,24 @@ table {
   border-collapse: collapse;
 }
 
+.sliderparent {
+  width: 50%;
+  margin: 5px;
+}
+
+.slider {
+  margin-left: 50px;
+}
+
 .cell {
   border: 1px solid lightgray;
-  padding-top: max(min(3vw, 1.05rem), 7.5px);
-  padding-bottom: max(min(3vw, 1.05rem), 7.5px);
-  padding-left: max(min(4vw, 1.4rem), 10px);
-  padding-right: max(min(4vw, 1.4rem), 10px);
+  padding-top: max(min(2.4vw, 0.9rem), 7.5px);
+  padding-bottom: max(min(3.4vw, 0.9rem), 7.5px);
+  padding-left: max(min(3.2vw, 1.2rem), 10px);
+  padding-right: max(min(3.2vw, 1.2rem), 10px);
   text-align: center;
   color: black;
-  font-size: max(min(3.5vw, 1.4rem), 8px);
+  font-size: max(min(3vw, 1rem), 8px);
   background: rgb(238, 237, 237);
 }
 
