More styling madness

--- a/sudoku/src/App.css
+++ b/sudoku/src/App.css
@@ -6,7 +6,8 @@
 
 .app-container {
   max-width: 720px;
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .title {
@@ -26,10 +27,21 @@ table {
   border-collapse: collapse;
 }
 
-.sliderparent {
-  /* max-width: 30%; */
-  /* margin: 5px; */
-  min-width: 180px;
+.control-panel {
+  max-width: 360px;
+  min-width: 230px;
+  margin: 10px auto;
+}
+
+.button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.slider-parent {
+  max-width: 230px;
+  min-width: 200px;
 }
 
 .slider {
@@ -38,10 +50,10 @@ table {
 
 .cell {
   border: 1px solid lightgray;
-  padding-top: max(min(2.4vw, 0.9rem), 7.5px);
-  padding-bottom: max(min(3.4vw, 0.9rem), 7.5px);
-  padding-left: max(min(3.2vw, 1.2rem), 10px);
-  padding-right: max(min(3.2vw, 1.2rem), 10px);
+  padding-top: max(min(2.4vw, 0.9rem), 6.75px);
+  padding-bottom: max(min(3.4vw, 0.9rem), 6.75px);
+  padding-left: max(min(3.2vw, 1.2rem), 9px);
+  padding-right: max(min(3.2vw, 1.2rem), 9px);
   text-align: center;
   color: black;
   font-size: max(min(3vw, 1rem), 8px);
