Added React-Toastify snackbars

--- a/sudoku/src/App.css
+++ b/sudoku/src/App.css
@@ -4,8 +4,13 @@
   padding: 0;
 }
 
+:root {
+  --toastify-font-family: 'Franklin Gothic Medium';
+}
+
 body {
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium';
+  /* font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; */
   background-color: rgb(250, 248, 238);
 }
 
